Add attachment option to marketplace

--- a/html/market.html
+++ b/html/market.html
@@ -33,6 +33,9 @@
                 <input type="text" id="contact-info" name="contact-info"
                     placeholder="Your contact information (email/phone)">
 
+                <label for="attachment">Attachment (Optional):</label>
+                <input type="file" id="attachment" name="attachment">
+
                 <button type="submit">Share Resource</button>
             </form>
         </section>
