Add event related information to calendar

--- a/html/notification.html
+++ b/html/notification.html
@@ -151,7 +151,7 @@
     </ul>
     <div class="notification-container" id="notificationBell">
       <div class="notification-icon">
-        <img src="notifications.svg" class="icon-image">
+        <img src="../assets/images/notifications.svg" class="icon-image">
         <div class="notification-count">1</div>
       </div>
       <a href="#" class="profile-link">Profile</a>
