--- a/html/calendar.html
+++ b/html/calendar.html
@@ -51,7 +51,7 @@
                 </tr>
                 <tr>
                     <td>12</td>
-                    <td>13<img src="../assets/images/wildFireIcon.png" /></td>
+                    <td>13</td>
                     <td>14</td>
                     <td>15</td>
                     <td>16</td>
@@ -64,13 +64,13 @@
                     <td>21</td>
                     <td>22</td>
                     <td>23</td>
-                    <td>24<img src="../assets/images/tornadoIcon.png" /></td>
+                    <td>24<img src="../assets/images/wildFireIcon.png" /></td>
                     <td>25</td>
                 </tr>
                 <tr>
                     <td>26</td>
                     <td>27</td>
-                    <td>28<img src="../assets/images/wildFireIcon.png" /></td>
+                    <td>28</td>
                     <td>29</td>
                     <td>30</td>
                     <td></td>
@@ -78,7 +78,15 @@
                 </tr>
             </tbody>
         </table>
+        <section id="date-info">
+            <h2>Date Information</h2>
+            <p id="selected-date-info">Click on a date in the calendar to view information.</p>
+            <p id="selected-disaster-type"></p>
+            <p id="selected-severity-level"></p>
+            <p id="selected-disaster-location"></p>
+        </section>
     </div>
+    <script src="../js/calendar.js"></script>
 </body>
 
 </html>
