Add community forum page

--- a/html/notification.html
+++ b/html/notification.html
@@ -15,9 +15,9 @@
   <div class="header">
     <img src="../assets/images/crisisLogo.jpg" alt="Logo" class="logo">
     <ul class="nav-links">
-      <li><a href="#">Community Forms</a></li>
+      <li><a href="community-form.html">Community Forms</a></li>
       <li><a href="market.html">Marketplace</a></li>
-      <li><a href="#">Resources</a></li>
+      <li><a href="emergency-info.html">Resources</a></li>
       <li><a href="calendar.html">Event Calendar</a></li>
       <li><a href="#">Maps</a></li>
       <div class="notification-container" id="notificationBell">
@@ -28,7 +28,6 @@
         <a href="user-profile.html" class="profile-link">Profile</a>
         <a href="logIn.html" class="signout-link">Signout</a>
         <div class="popup-container" id="popupContainer">
-          <!-- Add your pop-up content here -->
           <h2>Notification Pop-Up!</h2>
           <p>This is the pop-up content. You can customize it as needed.</p>
         </div>
