--- a/html/notification.html
+++ b/html/notification.html
@@ -13,23 +13,40 @@
 
 <body>
   <div class="header">
+
     <img src="../assets/images/crisisLogo.jpg" alt="Logo" class="logo">
+
     <ul class="nav-links">
       <li><a href="community-form.html">Community Forms</a></li>
+
       <li><a href="market.html">Marketplace</a></li>
       <li><a href="emergency-info.html">Resources</a></li>
       <li><a href="calendar.html">Event Calendar</a></li>
       <li><a href="#">Maps</a></li>
+
       <div class="notification-container" id="notificationBell">
         <div class="notification-icon">
+
           <img src="../assets/images/notifications.svg" class="icon-image">
-          <div class="notification-count">1</div>
+
+          <div class="notification-count">2</div>
         </div>
+
         <a href="user-profile.html" class="profile-link">Profile</a>
         <a href="logIn.html" class="signout-link">Signout</a>
         <div class="popup-container" id="popupContainer">
-          <h2>Notification Pop-Up!</h2>
-          <p>This is the pop-up content. You can customize it as needed.</p>
+
+          <h2 class="main-heading">Notifications:</h2>
+
+          <img src="../assets/images/tornadoIcon.png" class="tornado-icon">
+
+          <p class="noti-one">Hurricane, Category 2. Location : California</p>
+
+          <hr>
+
+          <img src="../assets/images/wildFireIcon.png" class="tornado-icon">
+
+          <p class="noti-one">Wilffire, High. Location: Florida</p>
         </div>
       </div>
     </ul>
