Conform css files to color pallette

--- a/html/community-form.html
+++ b/html/community-form.html
@@ -22,7 +22,7 @@
                     <button id="send">Search</button>
                 </div>
                 <ul class="forum-topics">
-                    <li><a href="#">Wild Fire Disaster</a></li>
+                    <li><a href="#">Wildfire Disaster</a></li>
                     <li><a href="#">Earthquake Disaster</a></li>
                 </ul>
             </div>
@@ -41,8 +41,10 @@
                 <div class="user-list">
                     <h3>Users</h3>
                     <ul class="users">
-                        <li>User 1</li>
-                        <li>User 2</li>
+                        <li>John</li>
+                        <li>Susan</li>
+                        <li>Mike</li>
+                        <li>Lisa</li>
                     </ul>
                 </div>
             </div>
