--- a/html/notification.html
+++ b/html/notification.html
@@ -40,13 +40,13 @@
 
           <img src="../assets/images/tornadoIcon.png" class="tornado-icon">
 
-          <p class="noti-one">Hurricane, Category 2. Location : California</p>
+          <p class="noti-one">Hurricane, Category 2, California</p>
 
           <hr>
 
           <img src="../assets/images/wildFireIcon.png" class="tornado-icon">
 
-          <p class="noti-one">Wilffire, High. Location: Florida</p>
+          <p class="noti-one">Wildfire, High, Florida</p>
         </div>
       </div>
     </ul>
