--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/notification.css">
+    <link rel="stylesheet" href="../css/main.css">
+</head>
+
+
+
 
 <body>
-    <p>Hello World!</p>
+    <div class="header">
+        <img src="../assets/images/crisisLogo.jpg" alt="Logo" class="logo">
+        <ul class="nav-links">
+            <li><a href="#">Community Forms</a></li>
+            <li><a href="market.html">Marketplace</a></li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="calendar.html">Event Calendar</a></li>
+            <li><a href="#">Maps</a></li>
+            <div class="notification-container" id="notificationBell">
+                <div class="notification-icon">
+                    <img src="../assets/images/notifications.svg" class="icon-image">
+                    <div class="notification-count">1</div>
+                </div>
+                <a href="user-profile.html" class="profile-link">Profile</a>
+                <a href="logIn.html" class="signout-link">Signout</a>
+                <div class="popup-container" id="popupContainer">
+                    <!-- Add your pop-up content here -->
+                    <h2>Notification Pop-Up!</h2>
+                    <p>This is the pop-up content. You can customize it as needed.</p>
+                </div>
+            </div>
+        </ul>
+
+    </div>
+
+    <div class="content">
+        <h1>Keep up with the disasters</h1>
+        <p>Stay ahead with any real information on possible disasters heading your way!<br>Learn how to avoid them
+            safely as well as steps to getting community support.</p>
+    </div>
+
+    <script>
+        const notificationBell = document.getElementById("notificationBell");
+        const popupContainer = document.getElementById("popupContainer");
+
+        notificationBell.addEventListener("click", togglePopup);
+
+        function togglePopup() {
+            popupContainer.classList.toggle("active");
+        }
+
+    </script>
 </body>
 
 </html>
