Add navigation to all pages

--- a/html/calendar.html
+++ b/html/calendar.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" type="text/css" href="../css/calendar.css">
 </head>
 
+
 <body>
-    <header>
-        <h1>Crisis Event Calendar</h1>
+    <header id="header-placeholder">
+        <!-- This empty header will be replaced by the JavaScript include -->
     </header>
+    <h1>Crisis Event Calendar</h1>
     <div id="event-calendar">
         <table>
             <thead>
@@ -87,6 +89,7 @@
         </section>
     </div>
     <script src="../js/calendar.js"></script>
+    <script src="/js/include-header.js"></script>
 </body>
 
 </html>
