--- a/html/community-form.html
+++ b/html/community-form.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-    <header>
-        <h1>Community Forums</h1>
+    <header id="header-placeholder">
+        <!-- This empty header will be replaced by the JavaScript include -->
     </header>
+    <br>
+    <h1>Community Forums</h1>
     <main>
         <section class="forums">
             <h2>Forums</h2>
@@ -50,6 +52,7 @@
             </div>
         </section>
     </main>
+    <script src="/js/include-header.js"></script>
 </body>
 
 </html>
