--- a/html/emergency-info.html
+++ b/html/emergency-info.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+  <header id="header-placeholder">
+    <!-- This empty header will be replaced by the JavaScript include -->
+  </header>
+
   <h1>British Columbia (BC)</h1>
   <div class="container">
     <h1>Emergency Contact Numbers</h1>
@@ -67,6 +71,7 @@
   </div>
 
   </div>
+  <script src="/js/include-header.js"></script>
 </body>
 
 </html>
