--- a/html/maps.html
+++ b/html/maps.html
@@ -16,9 +16,10 @@
 </head>
 
 <body>
-    <header>
-        <h1>Maps for Crisis Warnings & Resources</h1>
+    <header id="header-placeholder">
+        <!-- This empty header will be replaced by the JavaScript include -->
     </header>
+    <h1>Maps for Crisis Warnings & Resources</h1>
     <div>
         <section id="mapa-stoppa">
             <h2>Find geographical information</h2>
@@ -56,6 +57,7 @@
 
         //delte below if not working
     </script>
+    <script src="/js/include-header.js"></script>
     <script src="/js/maps.js"></script>
 </body>
 
