--- a/html/market.html
+++ b/html/market.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
-    <header>
-        <h1>Crisis Resource Sharing Marketplace</h1>
+    <header id="header-placeholder">
+        <!-- This empty header will be replaced by the JavaScript include -->
     </header>
+
+    <h1>Crisis Resource Sharing Marketplace</h1>
     <main>
+
         <section id="resource-form">
             <h2>Share a Resource</h2>
             <form action="#" method="POST">
@@ -39,6 +42,7 @@
         <section id="resource-list">
         </section>
         <script src="../js/market.js"></script>
+        <script src="../js/include-header.js"></script>
     </main>
 
 </body>
