--- a/html/registration.html
+++ b/html/registration.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <header id="header-placeholder">
+    <!-- This empty header will be replaced by the JavaScript include -->
+  </header>
   <div id="container">
     <h2>Registration</h2>
     <form class="form-container">
@@ -34,6 +37,7 @@
       <p class="login-link">Already have an account? <a href="#" class="log-in-thing">Log In</a>!</p>
     </form>
   </div>
+  <script src="/js/include-header.js"></script>
 </body>
 
 </html>
