--- a/html/index.html
+++ b/html/index.html
@@ -12,18 +12,19 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
-
-
+<header id="header-placeholder">
+    <!-- This empty header will be replaced by the JavaScript include -->
+</header>
 
 <body>
     <div class="header">
         <img src="../assets/images/crisisLogo.jpg" alt="Logo" class="logo">
         <ul class="nav-links">
-            <li><a href="#">Community Forms</a></li>
+            <li><a href="/html/community-form.html">Community Forms</a></li>
             <li><a href="market.html">Marketplace</a></li>
-            <li><a href="#">Resources</a></li>
+            <li><a href="/html/emergency-info.html">Resources</a></li>
             <li><a href="calendar.html">Event Calendar</a></li>
-            <li><a href="#">Maps</a></li>
+            <li><a href="/html/maps.html">Maps</a></li>
             <div class="notification-container" id="notificationBell">
                 <div class="notification-icon">
                     <img src="../assets/images/notifications.svg" class="icon-image">
@@ -58,6 +59,7 @@
         }
 
     </script>
+    <script src="/js/include-header.js"></script>
 </body>
 
 </html>
