--- a/html/user-profile.html
+++ b/html/user-profile.html
@@ -8,26 +8,33 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/user-info.css">
 </head>
+<header id="header-placeholder">
+  <!-- This empty header will be replaced by the JavaScript include -->
+</header>
 
 <body>
-  <div id="container">
-    <h2>User Profile</h2>
-    <form>
-      <label for="first_name">Name:</label>
-      <input type="text" id="first_name" name="first_name" placeholder="Name">
+  <h2>s</h2>
+  <h1>User Profile</h1>
+  <section>
+    <div id="container">
+      <form>
+        <label for="first_name">Name:</label>
+        <input type="text" id="first_name" name="first_name" placeholder="Name">
 
-      <label for="phone">Phone Number:</label>
-      <input type="text" id="phone" name="phone" placeholder="Enter your new number">
+        <label for="phone">Phone Number:</label>
+        <input type="text" id="phone" name="phone" placeholder="Enter your new number">
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" placeholder="Enter your new email">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Enter your new email">
 
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" placeholder="Enter your new password">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Enter your new password">
 
-      <button type="submit">Update</button>
-    </form>
-  </div>
+        <button type="submit">Update</button>
+      </form>
+    </div>
+  </section>
+  <script src="/js/include-header.js"></script>
 </body>
 
 </html>
