Add README and Improved Page Navigation

--- a/html/calendar.html
+++ b/html/calendar.html
@@ -11,9 +11,7 @@
 
 
 <body>
-    <header id="header-placeholder">
-        <!-- This empty header will be replaced by the JavaScript include -->
-    </header>
+    <header id="header-placeholder"></header>
     <h1>Crisis Event Calendar</h1>
     <div id="event-calendar">
         <table>
@@ -32,7 +30,6 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- Calendar days with hardcoded dates -->
                 <tr>
                     <td></td>
                     <td></td>
