--- a/html/community-form.html
+++ b/html/community-form.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-    <header id="header-placeholder">
-        <!-- This empty header will be replaced by the JavaScript include -->
-    </header>
+    <header id="header-placeholder"></header>
     <br>
     <h1>Community Forums</h1>
     <main>
