--- a/html/logIn.html
+++ b/html/logIn.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beautiful Login Page</title>
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/logIn.css"> <!-- Link to your CSS file for styling -->
+    <link rel="stylesheet" href="../css/logIn.css">
 
 
 <body>
@@ -36,20 +36,6 @@
     </div>
     <script src="/js/include-header.js"></script>
 </body>
-<script>
-    button.addEventListener("click", handleClick)
-    // Function to handle the button click and redirect
-    function redirectToAnotherPage() {
-        // Specify the URL of the page you want to redirect to
-        var redirectToURL = "/html/community-form.html"; // Replace with your desired URL
-
-        // Redirect the user to the specified URL
-        window.location.href = redirectToURL;
-    }
-
-    // Add a click event listener to the button
-    var redirectButton = document.getElementById('redirect-button');
-    redirectButton.addEventListener('click', redirectToAnotherPage);
-</script>
+<script src="/js/registration.js"></script>
 
 </html>
