--- a/html/market.html
+++ b/html/market.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-    <header id="header-placeholder">
-        <!-- This empty header will be replaced by the JavaScript include -->
-    </header>
+    <header id="header-placeholder"></header>
 
     <h1>Crisis Resource Sharing Marketplace</h1>
     <main>
