--- a/html/user-profile.html
+++ b/html/user-profile.html
@@ -8,9 +8,7 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/user-info.css">
 </head>
-<header id="header-placeholder">
-  <!-- This empty header will be replaced by the JavaScript include -->
-</header>
+<header id="header-placeholder"></header>
 
 <body>
   <h2>s</h2>
