--- a/html/auth-header.html
+++ b/html/auth-header.html
@@ -13,8 +13,7 @@
 
 <body>
   <div class="header">
-
-    <div><a href="/html/index.html"><img href="community-form.html" src="../assets/images/crisisLogo.jpg" alt="Logo"
+    <div><a href="community-form.html"><img href="community-form.html" src="../assets/images/crisisLogo.jpg" alt="Logo"
           class="logo"></a></div>
 
     <ul class="nav-links">
