--- a/html/header.html
+++ b/html/header.html
@@ -13,8 +13,7 @@
 
 <body>
   <div class="header">
-
-    <img src="../assets/images/crisisLogo.jpg" alt="Logo" class="logo">
+    <a href="/html/index.html"><img src="../assets/images/crisisLogo.jpg" alt="Logo" class="logo"></a>
 
     <ul class="nav-links">
 
@@ -23,19 +22,7 @@
       <li><a href="/html/maps.html">Maps</a></li>
   </div>
   </ul>
-
   </div>
-
-  <script>
-    const notificationBell = document.getElementById("notificationBell");
-    const popupContainer = document.getElementById("popupContainer");
-
-    notificationBell.addEventListener("click", togglePopup);
-
-    function togglePopup() {
-      popupContainer.classList.toggle("active");
-    }
-  </script>
 </body>
 
 </html>
