--- a/html/index.html
+++ b/html/index.html
@@ -12,53 +12,13 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
-<header id="header-placeholder">
-    <!-- This empty header will be replaced by the JavaScript include -->
-</header>
-
 <body>
-    <div class="header">
-        <img src="../assets/images/crisisLogo.jpg" alt="Logo" class="logo">
-        <ul class="nav-links">
-            <li><a href="/html/community-form.html">Community Forms</a></li>
-            <li><a href="market.html">Marketplace</a></li>
-            <li><a href="/html/emergency-info.html">Resources</a></li>
-            <li><a href="calendar.html">Event Calendar</a></li>
-            <li><a href="/html/maps.html">Maps</a></li>
-            <div class="notification-container" id="notificationBell">
-                <div class="notification-icon">
-                    <img src="../assets/images/notifications.svg" class="icon-image">
-                    <div class="notification-count">1</div>
-                </div>
-                <a href="user-profile.html" class="profile-link">Profile</a>
-                <a href="logIn.html" class="signout-link">Signout</a>
-                <div class="popup-container" id="popupContainer">
-                    <!-- Add your pop-up content here -->
-                    <h2>Notification Pop-Up!</h2>
-                    <p>This is the pop-up content. You can customize it as needed.</p>
-                </div>
-            </div>
-        </ul>
-
-    </div>
-
+    <header id="non-auth-header-placeholder"> </header>
     <div class="content">
         <h1>Keep up with the disasters</h1>
         <p>Stay ahead with any real information on possible disasters heading your way!<br>Learn how to avoid them
             safely as well as steps to getting community support.</p>
     </div>
-
-    <script>
-        const notificationBell = document.getElementById("notificationBell");
-        const popupContainer = document.getElementById("popupContainer");
-
-        notificationBell.addEventListener("click", togglePopup);
-
-        function togglePopup() {
-            popupContainer.classList.toggle("active");
-        }
-
-    </script>
     <script src="/js/include-header.js"></script>
 </body>
 
