--- a/html/registration.html
+++ b/html/registration.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-  <header id="header-placeholder">
-    <!-- This empty header will be replaced by the JavaScript include -->
-  </header>
+  <header id="non-auth-header-placeholder"></header>
   <div id="container">
     <h2>Registration</h2>
     <form class="form-container">
@@ -31,13 +29,13 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
 
-      <button type="submit">Register</button>
-
-      <!-- Add the login link below the button -->
-      <p class="login-link">Already have an account? <a href="#" class="log-in-thing">Log In</a>!</p>
+      <button id="redirect-button" href="/html/community-form.html" type="button"><a
+          href="/html/community-form.html">Register</a></button></button>
+      <p class="login-link">Already have an account? <a href="logIn.html" class="log-in-thing">Log In</a>!</p>
     </form>
   </div>
   <script src="/js/include-header.js"></script>
+  <script src="/js/registration.js"></script>
 </body>
 
 </html>
